# hite-cross-country

./: .gitignore  Dockerfile  README.md  dev.nix  pyproject.toml
app/: auth.py  backup.py  db.py  main.py  models.py  util.py
app/routers/: admin.py  events.py  public.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRD.txt
scripts/: seed.py
static/css/: style.css
templates/: base.html
templates/admin/: dashboard.html  event_cancel.html  event_delete.html  event_form.html  event_postpone.html  events.html  login.html  result_delete.html  result_edit.html  result_entry.html  student_delete.html  student_form.html  students.html
templates/events/: calendar.html  event_detail.html  event_list.html  upcoming.html
templates/public/: home.html  student_detail.html  students.html
tests/: conftest.py  test_admin.py  test_backup.py  test_events.py  test_public.py  test_smoke.py
