[project]
name = "hite-xc"
version = "0.1.0"
description = "Hite Elementary Cross Country team website"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1,<3",
    "bcrypt>=4.1,<5",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
